# tactical-value-system

./: .gitignore  GEMINI.md  README.md  all-identities.html  audit_clusters.py  check_miami.py  debug_2026.py  explorer.html  identities.html  index.html  league-pulse.html  main.py  methodology.html  players.html  pyproject.toml  site.css  site.js  test_asa.py  test_pass.py  test_pca.py  test_sp.py
assets/: metadata_mls_2020.json  metadata_mls_2021.json  metadata_mls_2022.json  metadata_mls_2023.json  metadata_mls_2024.json  metadata_mls_2025.json  metadata_mls_2026.json  metadata_nwsl_2020.json  metadata_nwsl_2021.json  metadata_nwsl_2022.json  metadata_nwsl_2023.json  metadata_nwsl_2024.json  metadata_nwsl_2025.json  metadata_nwsl_2026.json  metadata_usl1_2020.json  metadata_usl1_2021.json  metadata_usl1_2022.json  metadata_usl1_2023.json  metadata_usl1_2024.json  metadata_usl1_2025.json  metadata_usl1_2026.json  metadata_uslc_2020.json  metadata_uslc_2021.json  metadata_uslc_2022.json  metadata_uslc_2023.json  metadata_uslc_2024.json  metadata_uslc_2025.json  metadata_uslc_2026.json  player_metadata_mls_2020.json  player_metadata_mls_2021.json  player_metadata_mls_2022.json  player_metadata_mls_2023.json  player_metadata_mls_2024.json  player_metadata_mls_2025.json  player_metadata_mls_2026.json  player_metadata_nwsl_2020.json  player_metadata_nwsl_2021.json  player_metadata_nwsl_2022.json  player_metadata_nwsl_2023.json  player_metadata_nwsl_2024.json  (+72 more)
scratch/: generate_all.py  run_2026.py
scripts/: generate_assets.py  train_taxonomy.py  validate_taxonomy.py
(+35 files in other folders)
