[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tvms"
version = "0.1.0"
description = "Tactical-Value Mapping System for North American soccer analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "itscalledsoccer>=1.3",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
addopts = "-q -p no:rerunfailures"
pythonpath = ["."]
testpaths = ["tests"]
